# snipsync

./: .bumpversion.cfg  .envrc  .gitignore  LICENSE  Makefile  Pipfile  README.md  setup.cfg  tox.ini  x.sh
.github/: build.yml
data/: config.cfg  python.snippets  sh.snippets  user.xml  xxx.xml
scripts/: init-config.sh  sync_to_intelij.sh  sync_to_pycharm.sh  sync_to_webstorm.sh  test
snipsync/: environment.py  io.py  lexer.py  main.py  position.py  settings.py  text.py  ultisnip.py  xml_snippet.py
test/: conftest.py  pytest.ini  test_io.py  test_snipsync.py  test_tokenize.py  test_ultisnip.py
tests/: conftest.py  test-dist.bash  test_cli.py  test_environment.py  test_io.py  test_main.py  test_tokenize.py  test_ultisnip.py
tests/data/: config.cfg  config.cfg.bkp  config_invalid.cfg  config_valid.cfg  user_empty.xml.bkp
