[metadata]
name = snipsync
version = 0.0.10
description = Syncs Ultisnips snippets to Intelij
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = sysid
author_email = sysid@gmx.de
url = https://github.com/sysid/snipsync
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
;package_dir = snipsync
packages = find:
install_requires =
    typer
include_package_data = True
python_requires = >=3.9

[options.packages.find]
;where = snipsync  ; gotcha: was not importable as snipsync

[options.entry_points]
console_scripts =
    snipsync = snipsync.main:app
